--- a/src/app/pages/general/not-found/not-found.component.html
+++ b/src/app/pages/general/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>404 Error Message goes here!</p>
+<div class="not-found-page">
+    <h1>Uh-oh...</h1>
+    <p>Looks like this page has burned its bridges.</p>
+    <p class="m-t-0">Sorry we can't connect you!</p>
+    <img src="assets/svg/bridge_404_illustration.svg" alt="WIDE broken bridge illustration" />
+    <div class="buttons">
+        <button [routerLink]="['/']">Go Back</button>
+    </div>
+</div>
