--- a/src/styles.scss
+++ b/src/styles.scss
@@ -383,16 +383,7 @@ select {
     background-color: $success;
 }
 
-/* HELPERS */
-.m-t-25 {
-    margin-top: 25px;
-}
-
-.p-t-25 {
-    padding-top: 25px;
-}
-
-
+/* Toast */
 .toast {
     position: fixed;
     bottom: 5%;
@@ -479,4 +470,17 @@ select {
             }
         }
     }
+}
+
+/* HELPERS */
+.m-t-0 {
+    margin-top: 0;
+}
+
+.m-t-25 {
+    margin-top: 25px;
+}
+
+.p-t-25 {
+    padding-top: 25px;
 }
