--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -24,3 +24,25 @@
         </ul>
     </div>
 </div>
+<app-wide-modal [showModal]="showMetaMaskWalletModal">
+    <div content class="metamask-modal">
+        <h3>Cannot detect MetaMask Wallet :(</h3>
+        <img src="assets/svg/MetaMask_Fox.svg" width="250" />
+        <p>Please make sure the <a href="https://metamask.io/" target="_blank">MetaMask wallet</a> is set up on this browser.</p>
+    </div>
+    <div buttons>
+        <button (click)="closeMetaMaskWalletModal()">Close</button>
+    </div>
+</app-wide-modal>
+<app-wide-modal [showModal]="showMetaMaskConnectModal">
+    <div content class="metamask-connect-modal">
+        <h3>Please connect your MetaMask Wallet</h3>
+        <img src="assets/svg/MetaMask_Fox.svg" width="250" />
+        <p>Please connect your MetaMask Wallet to WIDE.</p>
+        <p>If you already opened the wallet, make sure it has been unlocked, click "Connect To Wallet" again.</p>
+        <p>WIDE requires this to obtain your public Ethereum address.</p>
+    </div>
+    <div buttons>
+        <button (click)="closeMetaMaskConnectModal()">Close</button>
+    </div>
+</app-wide-modal>
