added preliminary siwe client integration

--- a/src/app/pages/client/getting-started/getting-started.component.scss
+++ b/src/app/pages/client/getting-started/getting-started.component.scss
@@ -62,6 +62,8 @@
 
         text-align: center;
 
+        white-space: pre-line;
+
         p.message {
             text-align: justify;
         }
