added credential management flow

--- a/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.scss
+++ b/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.scss
@@ -3,7 +3,8 @@
 a {
     display: block;
     position: relative;
-
+    text-decoration: none;
+    
     color: $white;
 
     padding-left: 15px;
