--- a/src/app/pages/client/main/main.component.scss
+++ b/src/app/pages/client/main/main.component.scss
@@ -1,47 +1,161 @@
 @import '_imports';
 
 .main {
+
     .credentials {
+        position: relative;
         background: $white;
         border-radius: 15px;
         padding: 10px 25px 10px 25px;
-
         min-height: 250px;
 
-        table {
-            width: 100%;
+        .header,
+        .credential-header,
+        .credential-property {
+            color: $grey-dark;
+            display: flex;
+            align-items: center;
+            height: 40px;
 
-            thead {
-                tr {
-                    th {
-                        &.label {
-                            text-align: left;
-                            color: $grey-dark;
+            padding-left: 15px;
+            padding-right: 15px;
+
+            .label {
+                text-align: left;
+            }
+        }
+
+        .credential {
+            border-radius: 10px;
+            &.expanded {
+                box-shadow: 0px 3px 8px 0px #3E1B071A;
+                margin-bottom: 15px;
+            }
+
+            .credential-header {
+                color: $black;
+    
+                height: 60px;
+    
+                .cred-arrow {
+                    cursor: pointer;
+    
+                    &.expanded {
+                        img {
+                            transform: rotate(180deg);
                         }
                     }
                 }
             }
 
-            tbody {
-                tr {
-                    td {
-                        padding-top: 15px;
-                    }
+            .credential-expanded {
+                color: $black;
+                background: #FAF7F680;
+                padding-top: 25px;
+                padding-bottom: 25px;
+
+                .credential-property {
+                    color: $black;
                 }
+            }
+        }
+
+        .panel-message {
+            width: 100%;
+            position: relative;
+            display: inline-block;
+            text-align: center;
+            top: 90px;
+            border-radius: 5px;
+
+            &.info {
+                background: $info;
+                color: $white;
+            }
+
+            &.error {
+                background: $error;
+                color: $white;
             }
         }
     }
 
-    .no-credential-icon {
-        padding: 10px;
-        background: $grey-light;
-        border-radius: 5px;
-
-        font-size: 24px;
-        margin-right: 10px;
-    }
-    
     .buttons {
         margin-top: 30px;
     }
+
+    // .credentials {
+    //     background: $white;
+    //     border-radius: 15px;
+    //     padding: 10px 25px 10px 25px;
+
+    //     min-height: 250px;
+
+    //     table {
+    //         width: 100%;
+
+    //         thead {
+    //             tr {
+    //                 th {
+    //                     &.label {
+    //                         text-align: left;
+    //                         color: $grey-dark;
+    //                     }
+    //                 }
+    //             }
+    //         }
+
+    //         tbody {
+    //             tr {
+    //                 vertical-align: top;
+    //                 td {
+    //                     padding-top: 15px;
+    //                 }
+    //             }
+
+    //             &.credential-group {
+    //                 box-shadow: 0px 3px 8px 0px #3E1B071A;
+    //             }
+    //         }
+
+    //         .credential-props {
+    //             background-color: $light-beige; //TODO: add 50% opacity
+
+
+    //             &.top {
+    //                 td {
+    //                     padding-top: 20px;
+    //                 }
+    //             }
+
+    //             &.bottom {
+    //                 td {
+    //                     padding-bottom: 20px;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
+
+    // .cred-arrow {
+    //     cursor: pointer;
+
+    //     &.expanded {
+    //         img {
+    //             transform: rotate(180deg);
+    //         }
+
+    //         margin-bottom: 20px;
+    //         display: block;
+    //     }
+    // }
+
+    // .no-credential-icon {
+    //     padding: 10px;
+    //     background: $grey-light;
+    //     border-radius: 5px;
+
+    //     font-size: 24px;
+    //     margin-right: 10px;
+    // }
 }
