--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,10 +69,10 @@ h4 {
 a {
     padding: 0px 5px 0px 5px;
     color: $peach;
-    text-decoration: none;
+    text-decoration: underline;
 
     &:hover {
-        background: $white;
+        text-decoration: none;
         color: $coral;
     }
 }
@@ -470,17 +470,4 @@ select {
             }
         }
     }
-}
-
-/* HELPERS */
-.m-t-0 {
-    margin-top: 0;
-}
-
-.m-t-25 {
-    margin-top: 25px;
-}
-
-.p-t-25 {
-    padding-top: 25px;
 }
