presentation flow UX/UI

--- a/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
+++ b/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
@@ -185,12 +185,12 @@
 
             <h2>Checkbox</h2>
             <div class="checkbox-group">
-                <h3>Small Checkbox (default)</h3>
-                <input type="checkbox" id="checkbox" name="checkbox" [(ngModel)]="form.checkboxValue">
+                <h3>Small Checkbox (.switch)</h3>
+                <input type="checkbox" id="checkbox" name="checkbox" class="switch" [(ngModel)]="form.checkboxValue">
             </div>
             <div class="checkbox-group">
-                <h3>Large checkbox (.checkbox-lg)</h3>
-                <input type="checkbox" class="checkbox-lg" id="checkbox2" name="checkbox2"
+                <h3>Large checkbox (.switch .switch-lg)</h3>
+                <input type="checkbox" class="switch switch-lg" id="checkbox2" name="checkbox2"
                     [(ngModel)]="form.checkboxValue2">
             </div>
 
