revised presentation flow, added tooltips

--- a/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.html
+++ b/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.html
@@ -3,12 +3,13 @@
         <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
     </div>
     <h2>Credentials Presentation Request</h2>
-    <p class="align-left">Here is what you are about to present to <b>Verifier Name</b>:</p>
+    <p class="align-left">Here is what you are about to present to <b>{{ presentation.verifier.name }}</b>:</p>
     <div class="credentials-panel">
         <ul class="credentials-header">
-            <li>Profile ID: 123456</li>
-            <li>Name: John</li>
-            <li>Surname: Doe</li>
+            <li>Verifier: {{ presentation.verifier.name }}</li>
+            <li>Timestamp: {{ presentation.timestamp | date:'dd-MMM-yyyy HH:mm'}}</li>
+            <li *ngFor="let cred of presentation.decrypted">{{cred.name}}: {{ cred.value }}</li>
+            <li *ngFor="let cred of presentation.encrypted">{{cred.name}}: <i class="mdi mdi-lock coral"></i> {{ cred.value | slice:0:12 }}...</li>
         </ul>
     </div>
     <div class="buttons vertical">
