--- a/src/app/pages/presentations/presentation-request/presentation-request.component.html
+++ b/src/app/pages/presentations/presentation-request/presentation-request.component.html
@@ -3,32 +3,22 @@
         <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
     </div>
     <h2>Credentials Presentation Request</h2>
-    <p><b>Verifier Name</b> is requesting you to present your <b>Google Profile</b></p>
-    <p class="align-left">Here is what you are going to present:</p>
+    <p class="align-justify"><b>{{presentationReq.verifier.name}}</b> is requesting you to present credentials from your <b>{{presentationReq.credential.description}}</b></p>
+    <p class="align-left">Here is what <b>{{presentationReq.verifier.name}}</b> are requesting:</p>
     <div class="credentials-panel">
         <ul class="credentials-header">
-            <li>Credential: Google Profile</li>
-            <li>Type: Google OAuth</li>
-            <li>Date added: XX</li>
-            <li>valid until: XX</li>
+            <li>Credential: {{presentationReq.credential.description}}</li>
+            <li>Type: {{presentationReq.credential.type}}</li>
         </ul>
-        <div class="decrypt-message">
-            <i class="label"><i class="mdi mdi-information"></i> Click Decrypt All to decrypt all credentials, alternatively click on each credential to
-                decrypt individually.</i>
+        <div class="credential-enumeration decrypted-credentials">
+            <i class="mdi mdi-lock coral"></i> Decrypted<span class="separator">:<app-tooltip message="{{presentationReq.verifier.name}} require these credentials to be decrypted"></app-tooltip></span> {{presentationReq.request.decrypted.join(', ')}}
         </div>
-        <ul class="credentials-items">
-            <li (click)="decrypt('profileId')"><i class="encrypted mdi mdi-lock"></i> <span class="credential-item">Profile ID</span></li>
-            <li (click)="decrypt('name')"><i class="decrypted mdi mdi-check"></i> <span class="credential-item">Name</span> <span>: Joe</span></li>
-            <li (click)="decrypt('surname')"><i class="encrypted mdi mdi-lock"></i> <span class="credential-item">Surname</span></li>
-            <li (click)="decrypt('email')"><i class="encrypted mdi mdi-lock"></i> <span class="credential-item">Email</span></li>
-        </ul>
-        <div class="decrypt-panel">
-            <button class="btn btn-alt btn-xs">Decrypt All</button>
-
+        <div class="credential-enumeration encrypted-credentials">
+            <i class="mdi mdi-lock coral"></i> Encrypted<span class="separator">:<app-tooltip position="bottom" message="These credentials are only required in their encrypted form"></app-tooltip></span> {{presentationReq.request.encrypted.join(', ')}}
         </div>
     </div>
     <div class="buttons vertical">
-        <button [routerLink]="['/presentation/confirm']">Continue</button>
+        <button [routerLink]="['/presentation/confirm']">Approve</button>
         <a class="btn btn-lg">Reject</a>
     </div>
 </div>
