--- a/src/app/components/wide-modal/wide-modal.component.scss
+++ b/src/app/components/wide-modal/wide-modal.component.scss
@@ -12,6 +12,8 @@
     align-items: center;
     justify-content: center;
 
+    z-index: 9999;
+
     .modal-content {
         width: 75%;
         max-width: 1000px;
