--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -13,6 +13,12 @@
         .wallet-connector {
             margin-left: auto;
 
+            .connect-wallet {
+                i.spinner {
+                    font-size: 24px;
+                }
+            }
+
             .accounts {
                 display: flex;
                 gap: 10px;
