--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -34,6 +34,10 @@ $info: $blue;
 $success: $green;
 $error: $coral;
 
-.coral {
+.text-coral {
     color: $coral;
+}
+
+.text-success {
+    color: $success;
 }
