--- a/src/styles.scss
+++ b/src/styles.scss
@@ -388,7 +388,7 @@ select {
     position: fixed;
     bottom: 5%;
     right: 5%;
-    width: 350px;
+    min-width: 350px;
     z-index: 100;
     border-radius: 10px;
     box-shadow: 0px 3px 8px rgba(62, 27, 7, 0.1);
