implemented Credential Adding flow

--- a/src/app/pages/client/integrations/google/google-signin-redirect/google-signin-redirect.component.html
+++ b/src/app/pages/client/integrations/google/google-signin-redirect/google-signin-redirect.component.html
@@ -2,16 +2,19 @@
     <h2>Sign in with Google</h2>
     <app-google-signin-procedure [activeStep]="4">
         <div class="buttons">
-            <button (click)="encryptData()">Encrypt</button>
-            <button class="btn-alt" (click)="toggleProfileDetailModal()">View Credentials</button>
+            <button *ngIf="profile" (click)="encryptData()">Encrypt</button>
+            <button *ngIf="profile" class="btn-alt" (click)="toggleProfileDetailModal()">View Credentials</button>
         </div>
     </app-google-signin-procedure>
 </div>
 <app-wide-modal [showModal]="showProfileDetailModal">
-    <div content class="google-crendtials">
+    <div content class="google-credentials">
         <h3>Google Profile Data</h3>
-        <p>This is the raw data sent to us by Google.</p>
-        <p>{{profile | json}}</p>
+        <p>This is the raw data you received from by Google.</p>
+        <p>WIDE does not have access to this data.</p>
+        <div class="scrollable">
+            <pre><p>{{profile | json}}</p></pre>
+        </div>
     </div>
     <div buttons>
         <button (click)="closeModal()">Close</button>
