--- a/src/app/pages/client/integrations/google/google-signin-redirect/google-signin-redirect.component.scss
+++ b/src/app/pages/client/integrations/google/google-signin-redirect/google-signin-redirect.component.scss
@@ -11,3 +11,23 @@
     align-items: center;
     justify-content: center;
 }
+
+.google-credentials {
+    max-height: 600px;
+
+    .scrollable {
+        width: 100%;
+        max-height: 400px;
+        overflow: auto;
+        background: $light-beige;
+        padding: 10px;
+        border-radius: 10px;;
+
+        p {
+            text-align: left;
+        }
+    }
+
+    margin-bottom: 20px;
+
+}
