--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -10,6 +10,7 @@
         overflow: auto;
         padding-left: 60px;
         padding-right: 40px;
-        margin-bottom: 25px;
+        padding-bottom: 25px;
+        box-sizing: border-box;
     }
 }
