--- a/src/app/pages/client/integrations/google/google-store-credentials/google-store-credentials.component.html
+++ b/src/app/pages/client/integrations/google/google-store-credentials/google-store-credentials.component.html
@@ -2,17 +2,20 @@
     <h2>Sign in with Google</h2>
     <app-google-signin-procedure [activeStep]="activeStep">
         <div class="buttons">
-            <button (click)="uploadData()" *ngIf="activeStep == 5"><i *ngIf="uploading" class="mdi mdi-loading rotate-mdi"></i> <span *ngIf="!uploading">Upload to WIDE</span></button>
+            <button (click)="uploadData()" *ngIf="activeStep == 5"><i *ngIf="uploading"
+                    class="mdi mdi-loading rotate-mdi"></i> <span *ngIf="!uploading">Upload to WIDE</span></button>
             <button class="btn-alt" *ngIf="activeStep == 5" (click)="toggleDataDetailModal()">View Data</button>
             <button [routerLink]="['/']" *ngIf="activeStep == 6">Return to Home</button>
         </div>
     </app-google-signin-procedure>
 </div>
 <app-wide-modal [showModal]="showDataDetailModal">
-    <div content class="google-crendtials">
+    <div content class="google-credentials">
         <h3>Encrypted Data</h3>
-        <p>This is the data that will be sent to WIDE</p>
-        <p>{{encryptedPayload}}</p>
+        <p>This is the raw data that will be sent to WIDE</p>
+        <div class="scrollable">
+            <pre><p>{{this.data | json}}</p></pre>
+        </div>
     </div>
     <div buttons>
         <button (click)="closeModal()">Close</button>
