--- a/src/app/pages/client/integrations/google/google-store-credentials/google-store-credentials.component.scss
+++ b/src/app/pages/client/integrations/google/google-store-credentials/google-store-credentials.component.scss
@@ -18,3 +18,23 @@
     background: fuchsia;
     display: block;
 }
+
+.google-credentials {
+    max-height: 600px;
+
+    .scrollable {
+        width: 100%;
+        max-height: 400px;
+        overflow: auto;
+        background: $light-beige;
+        padding: 10px;
+        border-radius: 10px;;
+
+        p {
+            text-align: left;
+        }
+    }
+
+    margin-bottom: 20px;
+
+}
