--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -41,3 +41,13 @@ $error: $coral;
 .text-success {
     color: $success;
 }
+
+.coral {
+    color: $light-beige;
+    background: $coral;
+}
+
+.success {
+    color: $light-beige;
+    background: $success;
+}
