--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,11 +120,11 @@ a.btn {
     text-decoration-thickness: 2px;
 
     cursor: pointer;
+}
 
-    .btn-icon {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+.btn-icon {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .btn-lg,
@@ -378,11 +378,6 @@ select {
     clip-path: $wide-tick-lg;
 }
 
-/* COLOURS */
-.success {
-    background-color: $success;
-}
-
 /* Toast */
 .toast {
     position: fixed;
@@ -470,4 +465,11 @@ select {
             }
         }
     }
+
+}
+
+/* MISC*/
+.pill {
+    padding: 5px;
+    border-radius: 5px;
 }
