--- a/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
@@ -1,1 +1,8 @@
-<p>oauth-signin works!</p>
+<div class="content">
+    <h2>Sign in with Google</h2>
+    <app-oauth-procedure-ui [activeStep]="1">
+        <div class="buttons">
+            <button (click)="startGoogleAuthProcess()">Take me to Google</button>
+        </div>
+    </app-oauth-procedure-ui>
+</div>
