added microsoft integration (no MSAL)

--- a/src/app/pages/client/add-credentials/add-credentials.component.html
+++ b/src/app/pages/client/add-credentials/add-credentials.component.html
@@ -1,12 +1,13 @@
 <div class="add-credential">
     <h2>What are we adding today?</h2>
     <div class="credential-panel">
-        <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']">
-            <i class="icon"><img src='assets/svg/google_icon.svg' alt="Google icon"/></i> 
+        <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'google' }">
+            <i class="icon"><img width="44" src='assets/svg/google_icon.svg' alt="Google icon"/></i> 
             <span>Sign in with Google</span>
         </div>
-        <div class="credential-pane disabled">
-
+        <div class="credential-pane disabled" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'microsoft' }">
+            <i class="icon"><img width="44" src='assets/svg/Microsoft_logo.svg' alt="Github icon"/></i> 
+            <span>Sign in with Microsoft</span>
         </div>
         <div class="credential-pane disabled">
 
