--- a/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
@@ -1,8 +1,8 @@
 <div class="content">
-    <h2>Sign in with Google</h2>
+    <h2>Sign in with {{oauthName}}</h2>
     <app-oauth-procedure-ui [activeStep]="1">
         <div class="buttons">
-            <button (click)="startGoogleAuthProcess()">Take me to Google</button>
+            <button (click)="startOAuthProcess()">Take me to {{oauthName}}</button>
         </div>
     </app-oauth-procedure-ui>
 </div>
